# TrashClassifier

./: app.py  pyproject.toml  requirements.txt
model/: saved_model.pb  signature.json
