[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "repl_python3_TrashClassifier"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.8"
lobe = "^0.3.0"
flask = "^2.0.1"
[tool.poetry.dev-dependencies]
